--- a/instagram/style.css
+++ b/instagram/style.css
@@ -103,3 +103,20 @@ body {
     display: flex;
     gap: 15px;
 }
+
+.footer {
+    background-color: rgb(255, 255, 255);
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+}
+
+.footer .wrapper {
+    display: flex;
+    justify-content: space-between;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
